--- a/IMOBILIARIA/index.html
+++ b/IMOBILIARIA/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imobiliária Santos</title>
+    <title>Imobiliaria Santos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
         <h1> Encontre o imóvel dos seus sonhos</h1> 
         <h2 class="sub-assinatura">A imobiliária que te ajuda no sonho do teu imóvel</h2>
         <img class="img-secao" src="assets/imovel-assinatura.jpg" alt="Fase de Assinatura">
-        <p>
+        <p class="descricao">
             Há <span>10 anos</span>  no ramo temos conquistado a confiança de <span>inúmeros clientes</span>. 
             Isso porque procuramos sempre as melhores condições tanto para quem quer comprar, 
             como para quem quer vender ou alugar. Oferecemos um <span>serviço de qualidade</span> servindo como 
@@ -31,7 +31,7 @@
     </div>
     <div class="servicos">
         <h1 class="subtitulos"> SERVIÇOS</h1>
-        <P> 
+        <P class="descricao"> 
             Contamos com diversos <span class="fonte-amarelo">serviços imobiliários</span> e também prestamos suporte em cada uma das etapas necessárias
              de cada serviço. Aqui na <span class="fonte-amarelo">Imobiliária Santos</span> podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:
         </P>
@@ -45,13 +45,13 @@
     <div class="corretores">
         <h1 class="titulo-corretor">CORRETORES</h1>
         <img class="img-core" src="assets/corretores.jpg" alt="Corretores">
-        <p>A <span>imobiliária Santos</span> conta com um time de profissionais qualificados que têm vários anos de experiência no mercado. Para entrar em 
+        <p class="descricao">A <span>imobiliária Santos</span> conta com um time de profissionais qualificados que têm vários anos de experiência no mercado. Para entrar em 
             contato com um de nossos corretores, basta clicar no link a seguir: <a href="mailto:corretores@gmail.com">Corretores</a></p>
     </div>
     <div class="contato">
         <h1 class="subtitulos">CONTATO</h1>
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr"></iframe>
-        <p>Se ficou interessado em nos conhecer ou se tiver dúvidas entre em <span class="fonte-amarelo"> conosco</span> através de um dos telefones abaixo:</p>
+        <p class="descricao">Se ficou interessado em nos conhecer ou se tiver dúvidas entre em <span class="fonte-amarelo"> conosco</span> através de um dos telefones abaixo:</p>
         <dl>
         <li><a href="">Escritorio Barra da Tijuca</a></li>
         <li><a href="">Escritorio Centro/RJ</a></li>
