Finalzação Projeto Front-end

--- a/PETSHOP/index.html
+++ b/PETSHOP/index.html
@@ -24,40 +24,83 @@
    <div class="servicos">
     <h2> Alguns dos nossos seviços</h2>
     <div class="lista-servicos">
-        <dl>
-            <li>Banho & Tosa: Banho, hidratação, tosa higiénica, 
+        <dl class="listas-dl">
+            <li><span>Banho & Tosa</span>: Banho, hidratação, tosa higiénica, 
                 tosa de cachorros de diversas raças e outros serviços feitos por profissionais parceiros especialistas no assunto.
             </li>
             <li>
-                Veterinário 24h: A saúde do seu melhor amigo em boas mãos, consultas, exames e vacinas com médicos-veterinários parceiros.
+                <span>Veterinário 24h</span>: A saúde do seu melhor amigo em boas mãos, consultas, exames e vacinas com médicos-veterinários parceiros.
             </li>
             <li>
-                Dog Walker: Sem tempo para sair com seu cachorro? Al m de caminhadas, os passeadores parceiros Pet Anjo ainda corrigem comportamentos e ensinam comandos básicos.
+                <span>Dog Walker</span>: Sem tempo para sair com seu cachorro? Al m de caminhadas, os passeadores parceiros Pet Anjo ainda corrigem comportamentos e ensinam comandos básicos.
             </li>
             <li>
-                Creche Pet: A creche para cachorro é  uma solução  o personalizada para quem n o quer deixar pet sozinho em casa durante o dia. Brincadeiras, cuidados e muito carinho!
+                <span>Creche Pet</span>: A creche para cachorro é  uma solução  o personalizada para quem n o quer deixar pet sozinho em casa durante o dia. Brincadeiras, cuidados e muito carinho!
             </li>
             <li>
-                Produtos para seu pet: Explore nossa loja repleta de produtos premium para animais de estimação. De alimentos saudáveis a brinquedos divertidos e acessórios elegantes.
+                <span>Produtos para seu pet</span>: Explore nossa loja repleta de produtos premium para animais de estimação. De alimentos saudáveis a brinquedos divertidos e acessórios elegantes.
             </li>
         </dl>
-        <img src="" alt="">
+
+        <img src="img/loja.png" alt="">
+        <img src="img/veterinario.png" alt="">
+        <img src="img/dog-walker.png" alt="">
+        <img src="img/creche.png" alt="">
+        <img src="img/banho.png" alt="">
     </div>
    </div>
    <div class="rede-social">
-
+    <p>
+        Aqui na <span>Pet Boutique</span> somos apaixonados pelo que fazemos!
+    </p>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/facebook-svgrepo-com.png" alt="Icone Facebook">
+    </a>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/instagram-svgrepo-com.png" alt="Icone Instagram">
+    </a>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="Icone Whatsapp">
+    </a>
    </div>
-   <div class="marcas">
-
+   <div class="secao-marcas">
+    <h2> Nossas principais marcas</h2>
+        <div class="marcas">
+    <img src="img/marcas/AlfaPet.png" alt="AlfaPet">
+    <img src="img/marcas/BichinhoChic.png" alt="">
+    <img src="img/marcas/Boehringer.png" alt="">
+    <img src="img/marcas/exopets.png" alt="">
+    <img src="img/marcas/Inataa.png" alt="">
+    <img src="img/marcas/LogoBiofresh.png" alt="">
+    <img src="img/marcas/LogoBravecto.png" alt="">
+    <img src="img/marcas/NexgardSpectra.png" alt="">
+    <img src="img/marcas/PapaPets.png" alt="">
+    <img src="img/marcas/Pickorruchos.png" alt="">
+    <img src="img/marcas/royalcanini.png" alt="">
+    <img src="img/marcas/saopet.png" alt="">
+        </div>
    </div>
    <div class="rede-social">
-
+    <p>
+            Na <span>Pet Boutique</span> você encontra Estilos e Elegância para Cães e Gatos.
+    </p>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/facebook-svgrepo-com.png" alt="Icone Facebook">
+    </a>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/instagram-svgrepo-com.png" alt="Icone Instagram">
+    </a>
+    <a href="https://wa.me/5511956904365" target="_blank" rel="noopener noreferrer"> 
+        <img src="img/redes-sociais/whatsapp-svgrepo-com.png" alt="Icone Whatsapp">
+    </a>
    </div>
    <div class="maps">
-
+    <h2>Onde estamos</h2>
+    <p>Se ficou interessado em nossos serviços, venha nos conhecer!</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr" frameborder="0"></iframe>
    </div>
    <div class="rodape">
-
+    <p>Site em desenvolvimento!</p>
    </div>
 </body>
 </html>
